# algorithms-project-69

./: .gitignore  Dockerfile  Makefile  README.md  coverage.xml  package-lock.json  pyproject.toml  setup.py
.github/workflows/: ci.yaml
search_engine/: search_engine.py
search_engine.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: test_search_engine.py
