[tool.poetry]
name = "algorithms-project-69"
version = "0.1.0"
description = ""
authors = ["shizomanya <mistic_aa@inbox.ru>"]
readme = "README.md"
packages = [{include = "search_engine"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
